[project]
name = "foo"
version = "1.0"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist.force-include]
"lib/fonts/FooSans" = "src/foo/FooSans"
"lib/stylelib" = "src/foo/stylelib"

[tool.hatch.build]
packages = ["src/foo"]

[tool.hatch.build.targets.wheel.force-include]
"lib/fonts/FooSans" = "src/foo/FooSans"
"lib/stylelib" = "src/foo/stylelib"

[tool.setuptools_scm]
[tool.tox]
